Updates from Overleaf

--- a/sec_ana.tex
+++ b/sec_ana.tex
@@ -40,7 +40,7 @@ Two-particle angular correlations are measured as a function of the relative azi
 \end{eqnarray}
 where $p_\mathrm{T,trig}$ and $p_\mathrm{T,assoc}$ denote the transverse momentum of the trigger and associated particles, respectively.
 While the transverse momentum range for associated particles is fixed to $1<p_\mathrm{T,assoc}<4$~GeV/$c$ for trigger particles, several transverse momentum ranges are considered. The lower limit of $p_\mathrm{T,trig}$ and $p_\mathrm{T,assoc}$ ($>$~1~GeV/$c$) is chosen in order to avoid jet-like contributions from lower $p_\mathrm{T}$ particles which extend into the larger $\Delta\eta$ range because of the limited $\eta$ acceptance~\cite{ALICE:2021nir}. The numbers of trigger particles and trigger--associated particle pairs are denoted as $N_\mathrm{trig}$ and $N_\mathrm{pair}$, respectively.
-The quantity $S(\Delta\eta, \Delta\varphi)$ represents the average number of pairs in the same event, while $B(\Delta\eta, \Delta\varphi)$ denotes the number of pairs obtained by the event mixing technique. The normalization of $B(\Delta\eta, \Delta\varphi)$ is represented by $B(0,0)$. To correct for acceptance effects, $S(\Delta\eta, \Delta\varphi)$ is divided by $B(\Delta\eta, \Delta\varphi)/B(0,0)$. The particles are weighted by the inverse of the tracking efficiency, which is obtained in the same way as in Ref.~\cite{ALICE:2021nir}. In that study, the tracking efficiency was calculated using a detector simulation with the PYTHIA 8 event generator and the GEANT3 transport code~\cite{Brun:1994aa}. To account for differences in particle composition between real data and PYTHIA, the tracking efficiency is determined from from the above mentioned PYTHIA-based simulation with re-weighted primary particle-species composition.
+The quantity $S(\Delta\eta, \Delta\varphi)$ represents the average number of pairs in the same event, while $B(\Delta\eta, \Delta\varphi)$ denotes the number of pairs obtained by the event mixing technique. The normalization of $B(\Delta\eta, \Delta\varphi)$ is represented by $B(0,0)$. To correct for acceptance effects, $S(\Delta\eta, \Delta\varphi)$ is divided by $B(\Delta\eta, \Delta\varphi)/B(0,0)$. The particles are weighted by the inverse of the tracking efficiency, which is obtained in the same way as in Ref.~\cite{ALICE:2021nir}. In that study, the tracking efficiency was calculated using a detector simulation with the PYTHIA 8 event generator and the GEANT3 transport code~\cite{Brun:1994aa}. To account for differences in particle composition between real data and PYTHIA, the tracking efficiency is determined from the above mentioned PYTHIA-based simulation with reweighted primary particle-species composition.
 The weights reflect realistic abundances of different particle species, which were extracted by a data-driven method~\cite{ALICE:2018hza, ALICE:2018vuu}.
 %Therefore, this method improves the jet-yield extraction and has no impact on the flow extraction.
 Events to be mixed are required to have primary vertices within the same 2 cm wide $z_{\rm vtx}$ interval. The correlation functions are averaged over the vertex intervals, resulting in the final per-trigger yield~\cite{Kopylov:1974th,Adam:2016tsv}. 
@@ -80,7 +80,7 @@ where $Y_{\rm{LM}}(\Delta\varphi)$ is the measured per trigger yield from low-mu
 The fit determines the scale factor $F$, pedestal $G$, and $v_{n,n}$ and is performed in various high-multiplicity classes as well as in different $p_\mathrm{T,trig}$ intervals. 
 This method assumes that $Y_{\rm{LM}}$ does not contain a near-side-peak structure that would originate from jet fragmentation or a near-side ridge.
 Furthermore it is assumed that the shape of the away-side-peak structure remains the same when changing the multiplicity class.
-The first assumption is ensured using the selected low-multiplicity template which does not have a strong near-side-peak structure compared to the studied higher multiplicity-classes. The second assumption, which involves the modification of jet shapes, was tested by projecting the near-side jet peaks onto $\Delta\eta$. 
+The first assumption is ensured using the selected low-multiplicity template which does not have a strong near-side-peak structure compared to the studied higher-multiplicity classes. The second assumption, which involves the modification of jet shapes, was tested by projecting the near-side jet peaks onto $\Delta\eta$. 
 %This projection did not reveal any strong dependence of the jet-peak shape on multiplicity class~\cite{LAKOMOV2017329}. However, 
 %The effect of the possible modification of the away-side jet yield on the result of the template fit was investigated by adjusting the away-side shape based on the observed differences between low- and high-multiplicity events. The effect on the extracted $v_2$ was found to be less than 1$\%$ in pp and p--Pb collisions for the kinematic selections used in this analysis. As for $v_3$, the maximum effect is about 3\% and 8$\%$ in pp and p--Pb collisions, respectively.  
 This modification of the jet shape is considered as one of the sources of systematic uncertainty and will be discussed in Sec.~\ref{sec:uncertainties}.
@@ -88,7 +88,7 @@ This modification of the jet shape is considered as one of the sources of system
 \begin{figure}[h!]
 	\centering
 	\hspace{-3em}\includegraphics[width=0.6\textwidth]{figures/FIG2_FlowExt.pdf} 
-	\caption{Per-trigger yield in $1.6<|\Delta\eta|<1.8$ extracted from 0--0.1\% and 60--100\% multiplicity percentile events in $\sqrt{s}=13$ TeV pp collisions. The data are fitted with the template fit method described by Eq.~\ref{eq:tmpfit}. The black markers show the signal for the 0--0.1\% multiplicity percentile. The red squares correspond to the low-multiplicity signal. The red and gray curves correspond to the extracted $v_{2,2}$ and $v_{3,3}$ signals, respectively. To improve visibility, the baselines of flow signals are shifted by $FY_{\mathrm{LM,min}}$, which represents the minimum yield of $FY(\Delta\varphi)_{\mathrm{LM}}$. The signal-to-fit ratio is shown in the bottom panel. The $\chi^{2}$ divided by the number of degrees of freedom is 0.894.}
+	\caption{Per-trigger yield in $1.6<|\Delta\eta|<1.8$ extracted from 0--0.1\% and 60--100\% multiplicity percentile events in $\sqrt{s}=13$ TeV pp collisions. The data are fitted with the template fit method described by Eq.~\ref{eq:tmpfit}. The black markers show the signal for the 0--0.1\% multiplicity percentile. The red squares correspond to the low-multiplicity signal. The red and gray curves correspond to the extracted $v_{2,2}$ and $v_{3,3}$ signals, respectively. To improve visibility, the baselines of flow signals are shifted by $FY_{\mathrm{LM,min}}$, which represents the minimum yield of $FY_{\mathrm{LM}}(\Delta\varphi)$. The signal-to-fit ratio is shown in the bottom panel. The $\chi^{2}$ divided by the number of degrees of freedom is 0.894.}
 	\label{fig:flowext}
 \end{figure}
 
@@ -159,7 +159,7 @@ This event scale was set by requiring a minimum $\pt$ of the leading track ($\pt
 \label{sec:uncertainties}
 
 \begin{table}[h!]
-\caption{The relative systematic uncertainties of $Y^{\rm{near}}$, $Y^{\rm{away,LM}}$, $F$, $v_{2}$ and $v_{3}$. The quantities$Y^{\rm{near}}$, $Y^{\rm{away,LM}}$, $F$, are only measured in pp collisions, whereas $v_{2}$ and $v_{3}$ are measured in both pp and p--Pb collisions. The quoted ranges correspond to minimum and maximum uncertainties. Those uncertainties that are considered to be negligible are marked ``negl.". The systematic variations which are not relevant for the measurement are denoted as ``N.A".}
+\caption{The relative systematic uncertainties of $Y^{\rm{near}}$, $Y^{\rm{away,LM}}$, $F$, $v_{2}$, and $v_{3}$. The quantities $Y^{\rm{near}}$, $Y^{\rm{away,LM}}$, $F$ are only measured in pp collisions, whereas $v_{2}$ and $v_{3}$ are measured in both pp and p--Pb collisions. The quoted ranges correspond to minimum and maximum uncertainties. Those uncertainties that are considered to be negligible are marked ``negl.". The systematic variations which are not relevant for the measurement are denoted as ``N.A".}
 \centering
 \label{tab:syst}
 \resizebox{\textwidth}{!} {
@@ -204,7 +204,7 @@ Note that for the measurement of $Y^{\rm{near}}$, the low-multiplicity-interval 
 %The uncertainties of $F$, $v_{2}$, and $v_{3}$ are estimated to be 0.7--9.2\%.
 
 %The systematic uncertainty from matching the track reconstructed by the TPC and the corresponding signal in the ITS is estimated by evaluating the fraction of the mismatch between them. The estimated uncertainties of $Y^{\rm{near}}$ and $Y^{\rm{away,LM}}$ are 2.0--3.0\%.
-The systematic uncertainty resulting from matching a track reconstructed by the TPC and the corresponding signal in the ITS is estimated by evaluating the fraction of mismatches in real data using simulations. Primary tracks have a higher matching efficiency than secondary tracks produced far from the interaction point or in interactions with detector material. To address the effect of different fractions of primary and secondary tracks in data and simulations on the matching efficiency, particle abundances in the simulation are re-weighted to reflect real data. This resulted in modified matching efficiency.
+The systematic uncertainty resulting from matching a track reconstructed by the TPC and the corresponding signal in the ITS is estimated by evaluating the fraction of mismatches in real data using simulations. Primary tracks have a higher matching efficiency than secondary tracks produced far from the interaction point or in interactions with detector material. To address the effect of different fractions of primary and secondary tracks in data and simulations on the matching efficiency, particle abundances in the simulation are reweighted to reflect real data. This resulted in modified matching efficiency.
 %The estimated uncertainties of $Y^{\rm{near}}$ and $Y^{\rm{away,LM}}$ are 2.0--3.0\%.
 
 The systematic uncertainty arising from the efficiency correction is estimated by performing a closure test, where two correlation functions are compared. The first correlation function is constructed using true information from the Monte Carlo samples described in Sec.~\ref{sec:experiment}. This provides a baseline for the expected correlation function. The second correlation function is constructed using reconstructed tracks corrected for tracking efficiency. By comparing the two correlation functions, it is possible to estimate the magnitude of the uncertainty introduced by the correction. 
