--- a/sec_results.tex
+++ b/sec_results.tex
@@ -7,7 +7,7 @@
 \begin{figure}[!b]
 	\centering
 	\hspace{-4.5em}\includegraphics[width=0.92\textwidth]{figures/FIG4_vn_pppPb.pdf} %<--- keep the scale at 0.9 to match with other figures
-	\caption{The magnitude of $v_2$ (left) and $v_3$ (right) as a function of $p_\mathrm{T}$ for the 0--0.1\% multiplicity interval in pp collisions at $\sqrt{s}=13$~TeV and 0--20\% in p--Pb collisions at $\sqrt{s_\mathrm{NN}} = 5.02$~TeV. The boxes around the data points represent the estimated systematic uncertainty and the error bars correspond to the statistical errors.}
+	\caption{The magnitude of $v_2$ (left) and $v_3$ (right) as a function of $p_\mathrm{T}$ for the 0--0.1\% multiplicity interval in pp collisions at $\sqrt{s}=13$~TeV and 0--20\% in p--Pb collisions at $\sqrt{s_\mathrm{NN}} = 5.02$~TeV. The boxes around the data points represent the estimated systematic uncertainty and the error bars correspond to statistical errors.}
 	\label{fig:vn}
 \end{figure}
 %python3 Fig2_vn_ppPb.py
@@ -22,7 +22,7 @@ These results are comparable to those obtained by ATLAS in different multiplicit
 \includegraphics[width=1.0\textwidth]{figures/FIG5_v2Mult_allSystems_Data.pdf} 
 	\caption{The magnitudes of $v_2$ (left
     panel) and $v_3$ (right panel) 
- for two different collision systems, pp and p--Pb as a function of charged-particle multiplicity at midrapidity. For pp collisions, two different $p_\mathrm{T}$-intervals are shown, $1.0<p_\mathrm{T}<2.0$ GeV/$c$ and $1.0<p_\mathrm{T}<4.0$ GeV/$c$. The boxes around the data points represent the estimated systematic uncertainties and the error bars corresponds to the statistical errors.} 
+ for two different collision systems, pp and p--Pb as a function of charged-particle multiplicity at midrapidity. For pp collisions, two different $p_\mathrm{T}$ intervals are shown, $1.0<p_\mathrm{T}<2.0$ GeV/$c$ and $1.0<p_\mathrm{T}<4.0$ GeV/$c$. The boxes around the data points represent the estimated systematic uncertainties and the error bars corresponds to statistical errors.} 
 	\label{fig:v2mult}
 \end{figure}
 
@@ -35,7 +35,7 @@ It is worth noting that the results presented from pp and p--Pb collisions were 
 \begin{figure}[h!]
 	\centering
 	\hspace{-3em}\includegraphics[width=0.8\textwidth]{figures/FIG6_vn_LP.pdf}
-	\caption{The magnitudes of $v_2$ (top) and $v_3$ (bottom) as a function of $\it{p}^{\rm{LP}}_{\rm{T,min}}$ (left) and $\it{p}^{\rm{Jet}}_{\rm{T,min}}$ (right) for the high-multiplicity in pp collisions at $\sqrt{s}=13$. The measured $p_{\mathrm{T}}$ intervals are $1<p_{\mathrm{T}}<2\,\mathrm{GeV}/c$ (in red) and $1<p_{\mathrm{T}}<4\,\mathrm{GeV}/c$ (in black). The statistical errors and systematic uncertainties are shown as vertical bars and boxes, respectively.}
+	\caption{The magnitudes of $v_2$ (top) and $v_3$ (bottom) as a function of $\it{p}^{\rm{LP}}_{\rm{T,min}}$ (left) and $\it{p}^{\rm{jet}}_{\rm{T,min}}$ (right) for the high-multiplicity in pp collisions at $\sqrt{s}=13$ TeV. The measured $p_{\mathrm{T}}$ intervals are $1<p_{\mathrm{T}}<2\,\mathrm{GeV}/c$ (in red) and $1<p_{\mathrm{T}}<4\,\mathrm{GeV}/c$ (in black). The statistical errors and systematic uncertainties are shown as vertical bars and boxes, respectively.}
 	\label{fig:LPjet23}
 \end{figure}    
 
@@ -51,7 +51,7 @@ However, the presented measurements are only limited to the low $\it{p}^{\rm{jet
 	\centering
 	\includegraphics[width=1.0\textwidth]{figures/FIG7_v2Mult_allSystems_Hydro.pdf} 
 	\caption{The measured and calculated evolution of $v_2$ (left) and $v_3$ (right) in pp and p--Pb collisions as a function of charged-particle multiplicity at midrapidity.
-The blue and red markers represent the measured p--Pb and pp data, respectively. The calculations are provided by hydrodynamical models~\cite{Parkkila:2021yha,Bernhard:2016tnd,Schenke:2020mbo,Taghavi:2019mqz} are presented with colored lines. The corresponding bands mark their statistical uncertainty. For GubsHyd calculations, the statistical uncertainty is smaller than the line thickness.} 
+The blue and red markers represent the measured p--Pb and pp data, respectively. The calculations provided by hydrodynamical models~\cite{Parkkila:2021yha,Bernhard:2016tnd,Schenke:2020mbo,Taghavi:2019mqz} are presented with colored lines. The corresponding bands mark their statistical uncertainty. For GubsHyd calculations, the statistical uncertainty is smaller than the line thickness.} 
 	\label{fig:vnmult_model}
 \end{figure}
 
@@ -71,10 +71,10 @@ This model describes well the multiplicity dependence of $v_2$ in p--Pb collisio
 For $v_3$, the model accurately describes the magnitudes and multiplicity dependence across the measured multiplicity ranges. The magnitudes of $v_3$ are slightly smaller in pp collisions than in p--Pb collisions according to the calculations, which agrees with the data within the uncertainties. The level of agreement between data and the IP Glasma model calculations is found to be similar to the results reported in Ref.~\cite{Acharya:2019vdf}.
 
 Finally, the results are compared with the GubsHyd model, a semi-analytical model based on the analytical Gubser solution to hydrodynamic equations~\cite{Gubser:2010ze,Gubser:2010ui}, known as Gubser flow. In Gubser flow, the initial state of conformal matter is linearly perturbed by an initial elliptic shape. The model is employed to shed light on the possible sources of the observed discrepancy between more realistic models mentioned above and the measurements in pp collisions~\cite{Taghavi:2019mqz}. Instead of modeling the initial entropy density in this model, as it is typically done in T$_{\text{R}}$ENTo or IP-Glasma, the initial state fluctuation is modeled directly. It assumes that proton ellipticity $\epsilon_{2}$ and RMS radius $r_{\text{rms}}$ fluctuate independently. These fluctuations are described by Gaussian probability distributions, which have widths $\sigma_{\epsilon}$
- and $\sigma_{r}$, respectively. The multiplicity dependence of the $v_2\{2\}$ of two-particle correlation functions depends on $\sigma_{r}$ and  $\chi\sigma_{\epsilon}$, where the coefficient $\chi$ encapsulates a correction for idealizations used in GubsHyd, including the absence of dissipation effects. The values of $\sigma_{r}$ and  $\chi\sigma_{\epsilon}$, were obtained by comparing the model with data. Since no non-flow effect is considered in the calculation, $v_2\{2\}$ is comparable with the flow measurements in the present study. The calculations for two sets of parameters are compared
+ and $\sigma_{r}$, respectively. The multiplicity dependence of the $v_2\{2\}$ of two-particle correlation functions depends on $\sigma_{r}$ and  $\chi\sigma_{\epsilon}$, where the coefficient $\chi$ encapsulates a correction for idealizations used in GubsHyd, including the absence of dissipation effects. The values of $\sigma_{r}$ and  $\chi\sigma_{\epsilon}$ were obtained by comparing the model with data. Since no non-flow effect is considered in the calculation, $v_2\{2\}$ is comparable with the flow measurements in the present study. The calculations for two sets of parameters are compared
 to data in Fig.~\ref{fig:vnmult_model}. The “param0” parameterization is based on the prediction proposed in Ref.~\cite{Taghavi:2019mqz} that $\chi \sigma_{\epsilon} =$ 0.097 and $\sigma_{r} =$ 0.4 fm. The other parameterizations “param1” and “param2” employ different $\chi \sigma_{\epsilon}$  and $\sigma_{r}$ values. The model captures the multiplicity dependence of $v_2$ well.
 
-In summary, the measured value of $v_{2}$ decreases with decreasing multiplicity in both pp and p--Pb collisions. This trend is also predicted by GubsHyd model calculations (Refs.~\cite{Taghavi:2019mqz} and~\cite{Weller:2017tsr}). Interestingly, the opposite trend is observed for the IP-GLASMA+MUSIC+UrQMD hydrodynamic calculations of $v_2$, where the value decreases with increasing charged-particle multiplicity~\cite{Schenke:2020mbo}.
+In summary, the measured $v_{2}$ value decrease with decreasing multiplicity in both pp and p--Pb collisions. This trend is also predicted by GubsHyd model calculations (Refs.~\cite{Taghavi:2019mqz} and~\cite{Weller:2017tsr}). Interestingly, the opposite trend is observed for the IP-GLASMA+MUSIC+UrQMD hydrodynamic calculations of $v_2$, where the value decreases with increasing charged-particle multiplicity~\cite{Schenke:2020mbo}.
 Approaching a lower bound for the size of a hydrodynamized
 system as predicted in Ref.~\cite{Taghavi:2019mqz}, 
 the decreasing trend of $v_2$, obtained by lowering the charged-particle multiplicity, changes and turns out to raise again after the observed minimum. However, this change in multiplicity dependence of $v_2$ at low multiplicities is still challenging to test with the current experimental uncertainties. For $v_3$, the IP-Glasma+MUSIC+UrQMD hydrodynamic calculations~\cite{Schenke:2020mbo} are the only ones that accurately describe its magnitude and multiplicity dependence across the measured ranges. The calculations predict that the magnitudes of $v_3$ are slightly smaller in pp collisions than in p--Pb collisions, within the measured multiplicity ranges. The discrepancies between the predictions and the data can be further studied by including these measurements in a future Bayesian parameter estimation, as well as by improving the initial-condition model for the small-system collisions.
