--- a/sec_summary.tex
+++ b/sec_summary.tex
@@ -2,10 +2,9 @@
 
 \section{Conclusions}
 \label{sec:summary}
-Long-range angular correlations for pairs of charged particles are studied in pp collisions at ${\sqrt{{\textit s}}}=13$~TeV and p--Pb collisions at $\sqrt{s_\mathrm{NN}} = 5.02$~TeV. Flow coefficients are extracted from long-range correlations ($1.6 <|\Delta\eta| < 1.8$) for a broad range of event charged-particle multiplicity classes using the template method, which allows one to subtract the enhanced away-side jet fragmentation yields in high-multiplicity events with respect to low-multiplicity events. The method that was used to measure the flow coefficients within the considered kinematic ranges has been verified to be stable.
-The systematic uncertainties on $v_2$ and $v_3$ measurements which reflect the possible differences in the away-side jet peak shapes in high- and low-multiplicity events were found to be 1\% and 3–8\%, respectively.
-However, it is important that these systematic uncertainties are reevaluated, when analyzing different kinematic ranges, as the effect may not always be negligible.
-The measured $p_\mathrm{T}$ dependence of $v_2$ and $v_3$ is consistent with the measurements by ATLAS, and shows that both $v_2$ and $v_3$ increase with $p_\mathrm{T}$ and reach their maximum at $2.5<p_\mathrm{T}<3.0\,\mathrm{GeV}/c$.
+Long-range angular correlations for pairs of charged particles are studied in pp collisions at ${\sqrt{{\textit s}}}=13$~TeV and p--Pb collisions at $\sqrt{s_\mathrm{NN}} = 5.02$~TeV. Flow coefficients are extracted from long-range correlations ($1.6 <|\Delta\eta| < 1.8$) for a broad range of charged-particle-multiplicity classes using the template method, which allows one to subtract the enhanced away-side jet fragmentation yields in high-multiplicity events with respect to low-multiplicity events. The method that was used to measure the flow coefficients within the considered kinematic ranges has been verified to be stable.
+The systematic uncertainties on $v_2$ and $v_3$ measurements, which reflect the possible differences in the away-side jet peak shapes in high- and low-multiplicity events, were found to be 1\% and 3–8\%, respectively. However, it is important that these systematic uncertainties are reevaluated, when analyzing different kinematic ranges, as the effect may not always be negligible.
+The measured $p_\mathrm{T}$ dependence of $v_2$ and $v_3$ is consistent with the measurements by ATLAS and shows that both $v_2$ and $v_3$ increase with $p_\mathrm{T}$ and reach their maximum at $2.5<p_\mathrm{T}<3.0\,~\mathrm{GeV}/c$.
 The measurement of $v_2$ as a function of charged-particle multiplicity in $|\eta|<0.5$ shows a weak multiplicity dependence both for pp and p--Pb collisions and tends to decrease toward lower multiplicities.
 %In pp collisions the results reveal a hint of a disappearing $v_2$ signal below $N_{\mathrm{ch}} = 10$. 
 The pp data suggests that the $v_2$ signal may disappear when the measurement is pursued further below $N_{\mathrm{ch}} = 10$. 
